--- a/templates/main.html
+++ b/templates/main.html
@@ -5,9 +5,25 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+
         <title>Album Collector</title>
     </head>
     <body>
-        {% include 'navbar.html' %} {% block content %}{% endblock content %}
+        <div class="container">
+            <header class="flex">{% include 'navbar.html' %}</header>
+            <div class="flex search-container">
+                <form action="{% url 'home' %}" method="GET">
+                    <input
+                        class="search-bar"
+                        type="text"
+                        name="q"
+                        placeholder="search artists..."
+                        autofocus
+                    />
+                </form>
+            </div>
+            <main>{% block content %}{% endblock content%}</main>
+        </div>
     </body>
 </html>
