--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,9 @@
 {% load static %}
 
-<div>
-    <h1 class="title title-1">AlbumCollector</h1>
+<div class="flex logo">
+    <a href="" class="title title-1">AlbumCollector</a>
     <p class="title title-greeting">Hello {{request.user}}</p>
+    <a class="nav-link nav-link-small" href="">Logout</a>
 </div>
 
 <div class="flex navigation">
