--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -23,7 +23,7 @@
 
 body {
     font-family: "Montserrat", sans-serif;
-    color: var(--color-dark-blue);
+    /* color: var(--color-dark-blue); */
 }
 
 header {
@@ -34,6 +34,11 @@ header {
 
 a {
     text-decoration: none;
+    color: var(--color-dark-blue);
+}
+
+.logo {
+    flex-direction: column;
 }
 
 .navigation {
@@ -129,7 +134,6 @@ a {
 }
 
 .album-card__title {
-    /* width: 85%; */
     font-size: 26px;
     color: var(--color-dark-blue);
     font-weight: 800;
@@ -202,6 +206,10 @@ a {
     header {
         flex-direction: column;
         align-items: center;
+    }
+    .logo {
+        align-items: center;
+        margin-bottom: 20px;
     }
     .navigation {
         align-items: center;
