--- a/main_app/templates/main_app/home.html
+++ b/main_app/templates/main_app/home.html
@@ -1,26 +1,3 @@
-{% extends 'main.html' %} {% block content %} {% if album_count %}
-<h2 class="title title-2">
-    Found {{ album_count }} album{{album_count|pluralize}} for "{{artist_name}}"
-</h2>
-
-<div class="album-container flex">
-    {% for album in albums %}
-
-    <div class="album-card">
-        <img src="{{ album.cover_art }}" alt="{{ album.name }}" />
-        <div class="album-card__overlay flex">
-            <div>
-                <h4 class="album-card__title">{{ album.name }}</h4>
-                <small class="album-card__date">{{ album.date }}</small>
-            </div>
-            <div class="album-card__buttons flex">
-                <a class="btn" href="">View</a>
-                <a class="btn btn-primary" href="">Add to collection</a>
-            </div>
-        </div>
-    </div>
-
-    {% endfor %}
-</div>
-
-{% endif %} {% endblock content %}
+{% extends 'main.html' %} {% block content %}
+<h1>HOMEPAGE</h1>
+{% endblock content %}
