--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -13,71 +13,15 @@
     --color-light: #f1faee;
 }
 
+/* ********************************************************************* 
+UTILITIES
+********************************************************************* */
 .flex {
     display: flex;
 }
 
 .container {
     padding: 50px;
-}
-
-body {
-    font-family: "Montserrat", sans-serif;
-    /* color: var(--color-dark-blue); */
-}
-
-header {
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 15px;
-}
-
-a {
-    text-decoration: none;
-    color: var(--color-dark-blue);
-}
-
-.logo {
-    flex-direction: column;
-}
-
-.navigation {
-    flex-direction: column;
-    align-items: flex-end;
-}
-
-.nav-social {
-    margin-bottom: 30px;
-    gap: 20px;
-}
-
-.nav-main {
-    gap: 40px;
-}
-
-.nav-link {
-    color: var(--color-dark-blue);
-    font-size: 18px;
-    font-weight: 600;
-    transition: all 0.2s ease;
-}
-
-.nav-link:hover {
-    color: var(--color-red);
-}
-
-.search-container {
-    justify-content: center;
-}
-
-.search-bar {
-    padding: 10px 20px;
-    font-size: 22px;
-    font-family: inherit;
-    width: 600px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    border-radius: 20px;
 }
 
 .icon {
@@ -108,6 +52,135 @@ a {
     color: var(--color-red);
 }
 
+/* ********************************************************************* 
+GENERAL
+********************************************************************* */
+body {
+    font-family: "Montserrat", sans-serif;
+    /* color: var(--color-dark-blue); */
+}
+
+header {
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 15px;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-dark-blue);
+}
+
+/* ********************************************************************* 
+HEADER AND NAVIGATION
+********************************************************************* */
+.logo {
+    flex-direction: column;
+}
+
+.navigation {
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.nav-social {
+    margin-bottom: 30px;
+    gap: 20px;
+}
+
+.nav-main {
+    gap: 40px;
+}
+
+.nav-link {
+    color: var(--color-dark-blue);
+    font-size: 18px;
+    font-weight: 600;
+    transition: all 0.2s ease;
+}
+
+.nav-link:hover {
+    color: var(--color-red);
+}
+
+/* ********************************************************************* 
+SEARCH BAR
+********************************************************************* */
+.search-container {
+    justify-content: center;
+}
+
+.search-bar {
+    padding: 10px 20px;
+    font-size: 22px;
+    font-family: inherit;
+    width: 600px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    border-radius: 20px;
+}
+
+/* ********************************************************************* 
+BUTTONS
+********************************************************************* */
+.btn {
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: var(--color-blue);
+    color: var(--color-light);
+    font-size: 16px;
+}
+
+.btn-primary {
+    background-color: var(--color-red);
+}
+
+.btn:hover {
+    opacity: 0.7;
+}
+
+/* ********************************************************************* 
+ARTISTS
+********************************************************************* */
+.artist-container {
+    max-width: 800px;
+    margin: 20px auto;
+}
+
+.artist-card {
+    justify-content: flex-start;
+    align-items: center;
+    padding: 50px 0;
+}
+
+.artist-card h3 {
+    font-size: 40px;
+}
+
+.artist-card img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.artist-card__title {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+    margin-left: 20px;
+}
+
+.artist-detail-container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.artist__header-img {
+    width: 100%;
+}
+/* ********************************************************************* 
+ALBUMS
+********************************************************************* */
 .album-container {
     flex-wrap: wrap;
     justify-content: center;
@@ -151,6 +224,8 @@ a {
 }
 
 .album-card > img {
+    width: 300px;
+    height: 300px;
     transition: all 0.2s ease;
 }
 
@@ -165,22 +240,9 @@ a {
     opacity: 1;
 }
 
-.btn {
-    padding: 10px 20px;
-    border-radius: 10px;
-    background-color: var(--color-blue);
-    color: var(--color-light);
-    font-size: 16px;
-}
-
-.btn-primary {
-    background-color: var(--color-red);
-}
-
-.btn:hover {
-    opacity: 0.7;
-}
-
+/* ********************************************************************* 
+MEDIA QUERIES
+********************************************************************* */
 @media (max-width: 1190px) {
     .title-1 {
         letter-spacing: 2px;
