--- a/templates/main.html
+++ b/templates/main.html
@@ -6,12 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+        <link
+            rel="shortcut icon"
+            type="image/jpg"
+            href="{% static 'images/favicon.png' %}"
+        />
 
         <title>Album Collector</title>
     </head>
     <body>
         <div class="container">
             <header class="flex">{% include 'navbar.html' %}</header>
+            {% comment %}
             <div class="flex search-container">
                 <form action="{% url 'home' %}" method="GET">
                     <input
@@ -23,6 +29,7 @@
                     />
                 </form>
             </div>
+            {% endcomment %}
             <main>{% block content %}{% endblock content%}</main>
         </div>
     </body>
