--- a/main_app/templates/main_app/artist_detail.html
+++ b/main_app/templates/main_app/artist_detail.html
@@ -1,32 +1,42 @@
 {% extends 'main.html' %} {% load humanize %} {% block content %}
 <div class="artist-detail-container">
-    <h1>{{ artist.name }}</h1>
-    <small>{{ artist.spotify_followers|intcomma }} spotify followers</small>
-    <img
-        class="artist__header-img"
-        src="{{artist.header_img}}"
-        alt="{{artist.name}}"
-    />
-    <div class="album-container flex">
+    <div class="container-header">
+        <h1 class="artist-name">{{ artist.name }}</h1>
+        <p class="artist-followers">
+            {{ artist.followers|intcomma }} spotify followers
+        </p>
+        <img
+            class="artist__header-img"
+            {%
+            comment
+            %}
+            src="{{artist.header_img}}"
+            {%
+            endcomment
+            %}
+            src="{{artist.avatar_img}}"
+            alt="{{artist.name}}"
+        />
+    </div>
+
+    <h2>Albums</h2>
+    <div class="album-container">
         {% for album in albums %}
 
-        <div class="album-card">
-            <img src="{{ album.cover_art }}" alt="{{ album.name }}" />
-            <div class="album-card__overlay flex">
-                <div>
-                    <h4 class="album-card__title">{{ album.name }}</h4>
-                    <small class="album-card__date">{{ album.date }}</small>
-                </div>
-                <div class="album-card__buttons flex">
-                    <a class="btn" href="">View</a>
-                    <a class="btn btn-primary" href="">Add to collection</a>
-                </div>
+        <a href="{% url 'album_detail' album.id %}">
+            <div class="album-card">
+                <img src="{{ album.cover_art }}" alt="{{ album.name }}" />
+                <h4 class="album-card__title">{{ album.name }}</h4>
+                <p class="album-card__date">({{ album.date}})</p>
             </div>
-        </div>
-
+        </a>
         {% endfor %}
     </div>
-    <div>{% autoescape off %} {{ artist.biography }}</div>
+
+    <div class="artist-biography">
+        <h2>Artist Biography</h2>
+        {{ artist.biography|safe |linebreaks }}
+    </div>
 </div>
 
-{% endautoescape %} {% endblock content %}
+{% endblock content %}
