--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -124,20 +124,28 @@ SEARCH BAR
 /* ********************************************************************* 
 BUTTONS
 ********************************************************************* */
+.btn-group {
+    margin: 25px 0;
+}
+
 .btn {
     padding: 10px 20px;
     border-radius: 10px;
     background-color: var(--color-blue);
     color: var(--color-light);
     font-size: 16px;
+    transition: all 0.2s ease;
 }
 
 .btn-primary {
     background-color: var(--color-red);
 }
+.btn-spotify {
+    background-color: var(--color-spotify-green);
+}
 
 .btn:hover {
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
 /* ********************************************************************* 
@@ -164,7 +172,8 @@ ARTISTS
     padding: 20px;
 }
 
-.artist-name {
+.artist-name,
+.album-name {
     font-size: 54px;
 }
 
@@ -180,7 +189,8 @@ ARTISTS
 }
 
 
-.artist-detail-container {
+.artist-detail-container,
+.album-detail-container {
     width: 80%;
     margin: 0 auto;
 }
@@ -199,7 +209,7 @@ ALBUMS
 }
 
 .album-card {
-    position: relative;
+
 }
 
 .album-card__title {
@@ -208,17 +218,37 @@ ALBUMS
     font-weight: 800;
 }
 
-
-/* .album-card__date {
-    cursor: default;
-} */
-
 .album-card > img {
     max-width: 100%;
-    /* height: 300px;
-    transition: all 0.2s ease; */
 }
 
+.album-detail-content {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+}
+
+
+.album-name {
+    font-size: 30px;
+}
+
+.album-detail-img {
+    max-width: 100%;
+}
+
+.album-tracks {
+    padding: 0 40px;
+}
+
+.track-link {
+    margin-bottom: 15px;
+    font-size: 20px;
+    transition: all 0.2s ease;
+}
+
+.track-link:hover {
+    color: var(--color-spotify-green)
+}
 
 /* ********************************************************************* 
 MEDIA QUERIES
