allows users to add albums to their collection when logged in

--- a/main_app/templates/main_app/album_detail.html
+++ b/main_app/templates/main_app/album_detail.html
@@ -10,7 +10,9 @@
                 alt="{{album.name}} cover art"
             />
             <div class="btn-group">
-                <a class="btn btn" href="">Add to collection</a>
+                <a class="btn btn" href="{% url 'add_to_collection' album.id %}"
+                    >Add to collection</a
+                >
                 <a class="btn btn-spotify" href="{{album.spotify_uri}}"
                     >Listen on spotify</a
                 >
