UI updates and add new releases to homepage

--- a/main_app/templates/main_app/album_detail.html
+++ b/main_app/templates/main_app/album_detail.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %} {% block content %}
 <div class="album-detail-container">
     <h1 class="album-name">{{ album.name }}</h1>
-    <h3>{{ album.artist }}</h3>
+    <h3 class="album-artist-name">{{ album.artist }}</h3>
     <div class="album-detail-content">
         <div>
             <img
