--- a/main_app/templates/main_app/mycollection.html
+++ b/main_app/templates/main_app/mycollection.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %} {% block content %}
-<h1>{{ user }}'s Collection</h1>
+<h1>{{ user }}'s collection</h1>
 
 <div class="album-container">
     {% for album in albums %}
