--- a/main_app/templates/main_app/artist_detail.html
+++ b/main_app/templates/main_app/artist_detail.html
@@ -19,24 +19,28 @@
         />
     </div>
 
-    <h2>Albums</h2>
-    <div class="album-container">
-        {% for album in albums %}
+    <details>
+        <summary class="artist-list-heading">Artist Biography</summary>
+        <div class="artist-biography">
+            {{ artist.biography|safe |linebreaks }}
+        </div>
+    </details>
 
-        <a href="{% url 'album_detail' album.id %}">
-            <div class="album-card">
-                <img src="{{ album.cover_art }}" alt="{{ album.name }}" />
-                <h4 class="album-card__title">{{ album.name }}</h4>
-                <p class="album-card__date">({{ album.date}})</p>
-            </div>
-        </a>
-        {% endfor %}
-    </div>
+    <details open>
+        <summary class="artist-list-heading">Albums</summary>
+        <div class="album-container">
+            {% for album in albums %}
 
-    <div class="artist-biography">
-        <h2>Artist Biography</h2>
-        {{ artist.biography|safe |linebreaks }}
-    </div>
+            <a href="{% url 'album_detail' album.id %}">
+                <div class="album-card">
+                    <img src="{{ album.cover_art }}" alt="{{ album.name }}" />
+                    <h4 class="album-card__title">{{ album.name }}</h4>
+                    <p class="album-card__date">({{ album.date}})</p>
+                </div>
+            </a>
+            {% endfor %}
+        </div>
+    </details>
 </div>
 
 {% endblock content %}
