update login and signup pages

--- a/main_app/templates/main_app/home.html
+++ b/main_app/templates/main_app/home.html
@@ -18,7 +18,7 @@
 </div>
 {% endif %}
 
-<h1 style="text-align: center;">New Releases In Canada</h1>
+<h1 style="text-align: center;">Not sure where to start? Check out these new releases...</h1>
 <div class="artist-list-container">
     <div class="album-container">
         {% for album in albums %}
