--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,9 +1,12 @@
 {% extends 'main.html' %} {% block content %}
-<h1>Login</h1>
 
-<form action="{% url 'login'%}" method="POST">
-    {% csrf_token %} {{ form.as_p }}
-    <input type="submit" class="btn" value="Login" />
-    <input type="hidden" name="next" value="{{next}}" />
-</form>
+<div class="form-container">
+    <h1 class="form-title">Login</h1>
+    <form action="{% url 'login'%}" method="POST">
+        {% csrf_token %} {{ form.as_p }}
+        <input type="submit" class="btn" value="Login" />
+        <input type="hidden" name="next" value="{{next}}" />
+    </form>
+</div>
+
 {% endblock content %}
