--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -109,6 +109,7 @@ HERO
 ********************************************************************* */
 .hero {
     background-color: var(--color-red);
+    color: #eee;
     display: grid;
     grid-template-columns: 2fr 3fr;
     margin: 50px 0;
@@ -179,6 +180,8 @@ BUTTONS
     color: var(--color-light);
     font-size: 16px;
     transition: all 0.2s ease;
+    cursor: pointer;
+    border: none;
 }
 
 .btn-red {
@@ -190,6 +193,38 @@ BUTTONS
 
 .btn:hover {
     opacity: 0.9;
+}
+/* ********************************************************************* 
+FORMS
+********************************************************************* */
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid grey;
+    border-radius: 15px;
+    background-color: var(--color-red);
+    color: white;
+    padding: 50px;
+    margin: 100px auto;
+    max-width: 600px;
+}
+
+.form-title {
+    font-size: 42px;
+    font-weight: 600;
+    margin-bottom: 40px;
+}
+
+label {
+    margin-bottom: 10px;
+}
+
+input {
+    padding: 10px 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 100%;
 }
 
 /* ********************************************************************* 
