--- a/main_app/templates/main_app/home.html
+++ b/main_app/templates/main_app/home.html
@@ -27,6 +27,7 @@
             <div class="album-card">
                 <img src="{{ album.cover_art }}" alt="{{ album.name }}" />
                 <h4 class="album-card__title">{{ album.name }}</h4>
+                <h4 class="album-card__artist">{{ album.artist }}</h4>
                 <p class="album-card__date">({{ album.date}})</p>
             </div>
         </a>
