add github, linkedin, spotify links

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,31 +10,21 @@
 
 <div class="flex navigation">
     <div class="nav-social flex">
-        <img
+        <a href="https://github.com/jontoye" target="_blank"><img
             class="icon"
-            src="{% static 'images/icon-facebook.png' %}"
-            alt="facebook logo"
-        />
-        <img
+            src="{% static 'images/icon-github.png' %}"
+            alt="github logo"
+        /></a>
+        <a href="https://www.linkedin.com/in/jonathan-toye-80101938/" target="_blank"><img
             class="icon"
-            src="{% static 'images/icon-instagram.png' %}"
+            src="{% static 'images/icon-linkedin.png' %}"
             alt="instagram logo"
-        />
-        <img
-            class="icon"
-            src="{% static 'images/icon-twitter.png' %}"
-            alt="twitter logo"
-        />
-        <img
-            class="icon"
-            src="{% static 'images/icon-youtube.png' %}"
-            alt="youtube logo"
-        />
-        <img
+        /></a>
+        <a href="https://open.spotify.com/user/jontoye" target="_blank"><img
             class="icon"
             src="{% static 'images/icon-spotify.png' %}"
             alt="spotify logo"
-        />
+        /></a>
     </div>
     <nav class="nav-main flex">
         <a href="{% url 'search_by_album' %}" class="nav-link">Find By Album</a>
