--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -7,6 +7,7 @@
         <input type="submit" class="btn" value="Login" />
         <input type="hidden" name="next" value="{{next}}" />
     </form>
+    <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here.</a></p>
 </div>
 
 {% endblock content %}
