add demo login account

--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -7,6 +7,7 @@
         <input type="submit" class="btn" value="Login" />
         <input type="hidden" name="next" value="{{next}}" />
     </form>
+    <a href="{% url 'demo_login' %}" class="btn">Demo Account</a>
     <p>Don't have an account? <a href="{% url 'signup' %}">Sign up here.</a></p>
 </div>
 
