--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -7,7 +7,9 @@
     <form action="{% url 'signup'%}" method="POST">
         {% csrf_token %} {{ form.as_p }}
         <input type="submit" class="btn" value="Signup" />
+        <a href="{% url 'demo_login' %}" class="btn">Demo Account</a>
     </form>
     <p>Already have an account? <a href="{% url 'login' %}">Log in here.</a></p>
 </div>
+
 {% endblock content %}
