--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,450 +1,445 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;600;800&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    --color-red: #e63946;
-    --color-dark-blue: #1d3557;
-    --color-blue: #457b9d;
-    --color-light: #f1faee;
-    --color-spotify-green: #1db954;
+  --color-red: #e63946;
+  --color-dark-blue: #1d3557;
+  --color-blue: #457b9d;
+  --color-light: #f1faee;
+  --color-spotify-green: #1db954;
 }
 
 /* ********************************************************************* 
 UTILITIES
 ********************************************************************* */
 .flex {
-    display: flex;
+  display: flex;
 }
 
 .container {
-    padding: 30px;
+  padding: 30px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .icon {
-    width: 30px;
-    height: 30px;
-    padding: 3px;
+  width: 30px;
+  height: 30px;
+  padding: 3px;
 }
 
 .title {
-    font-weight: 600;
-    letter-spacing: 2px;
-    margin-bottom: 10px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  margin-bottom: 10px;
 }
 
 .title-1 {
-    font-size: 56px;
-    letter-spacing: 6px;
+  font-size: 56px;
+  letter-spacing: 6px;
 }
 
 .title-2 {
-    font-size: 28px;
-    text-align: center;
-    margin-bottom: 40px;
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .title-greeting {
-    font-size: 14px;
-    color: var(--color-red);
+  font-size: 14px;
+  color: var(--color-red);
 }
 
 /* ********************************************************************* 
 GENERAL
 ********************************************************************* */
 body {
-    font-family: "Montserrat", sans-serif;
-    /* color: var(--color-dark-blue); */
+  font-family: 'Montserrat', sans-serif;
+  /* color: var(--color-dark-blue); */
 }
 
 header {
-    justify-content: space-between;
-    align-items: flex-start;
-    margin-bottom: 15px;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 15px;
 }
 
 a {
-    text-decoration: none;
-    color: var(--color-dark-blue);
+  text-decoration: none;
+  color: var(--color-dark-blue);
 }
 
 /* ********************************************************************* 
 HEADER AND NAVIGATION
 ********************************************************************* */
 .logo {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .navigation {
-    flex-direction: column;
-    align-items: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .nav-social {
-    margin-bottom: 30px;
-    gap: 20px;
+  margin-bottom: 30px;
+  gap: 20px;
 }
 
 .nav-main {
-    gap: 40px;
+  gap: 40px;
 }
 
 .nav-link {
-    color: var(--color-dark-blue);
-    font-size: 18px;
-    font-weight: 600;
-    transition: all 0.2s ease;
+  color: var(--color-dark-blue);
+  font-size: 18px;
+  font-weight: 600;
+  transition: all 0.2s ease;
 }
 
 .nav-link:hover {
-    color: var(--color-red);
+  color: var(--color-red);
 }
 
 /* ********************************************************************* 
 HERO
 ********************************************************************* */
 .hero {
-    background-color: var(--color-red);
-    color: #eee;
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    margin: 50px 0;
+  background-color: var(--color-red);
+  color: #eee;
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+  margin: 50px 0;
 }
 
 .hero__img img {
-    max-width: 400px;
-    padding: 30px;
-    padding-left: 100px;
-    opacity: 0.7;
+  max-width: 400px;
+  padding: 30px;
+  padding-left: 100px;
+  opacity: 0.7;
 }
 
 .hero__content {
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .hero__content div {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .hero__heading {
-    font-size: 42px;
-    font-weight: 600;
+  font-size: 42px;
+  font-weight: 600;
 }
 
 .hero__subheading {
-    font-size: 26px;
-    font-weight: 400;
+  font-size: 26px;
+  font-weight: 400;
 }
 
 .hero__buttons {
-    gap: 30px;
+  gap: 30px;
 }
-
 
 /* ********************************************************************* 
 SEARCH BAR
 ********************************************************************* */
 .search-container {
-    justify-content: center;
+  justify-content: center;
 }
 
 .search-bar {
-    padding: 10px 20px;
-    font-size: 22px;
-    font-family: inherit;
-    width: 600px;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    border-radius: 20px;
+  padding: 10px 20px;
+  font-size: 22px;
+  font-family: inherit;
+  width: 600px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  border-radius: 20px;
 }
 
 /* ********************************************************************* 
 BUTTONS
 ********************************************************************* */
 .btn-group {
-    display: flex;
-    text-align: center;
-    flex-direction: column;
-    margin: 25px 0;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  margin: 25px 0;
 }
 
 .btn {
-    display: block;
-    text-align: center;
-    margin-bottom: 25px;
-    padding: 10px 30px;
-    border-radius: 10px;
-    background-color: var(--color-blue);
-    color: var(--color-light);
-    font-size: 16px;
-    transition: all 0.2s ease;
-    cursor: pointer;
-    border: none;
+  display: block;
+  text-align: center;
+  margin-bottom: 25px;
+  padding: 10px 30px;
+  border-radius: 10px;
+  background-color: var(--color-blue);
+  color: var(--color-light);
+  font-size: 16px;
+  transition: all 0.2s ease;
+  cursor: pointer;
+  border: none;
 }
 
 .btn-red {
-    background-color: var(--color-red);
+  background-color: var(--color-red);
 }
 .btn-spotify {
-    background-color: var(--color-spotify-green);
+  background-color: var(--color-spotify-green);
 }
 
 .btn-demo {
-    background-color: #eee;
-    color: var(--color-dark-blue)
+  background-color: #eee;
+  color: var(--color-dark-blue);
 }
 
 .btn:hover {
-    opacity: 0.9;
+  opacity: 0.9;
 }
 /* ********************************************************************* 
 FORMS
 ********************************************************************* */
 .form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid grey;
-    border-radius: 15px;
-    background-color: var(--color-red);
-    color: white;
-    padding: 50px;
-    margin: 100px auto;
-    max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid grey;
+  border-radius: 15px;
+  background-color: var(--color-red);
+  color: white;
+  padding: 50px;
+  margin: 100px auto;
+  max-width: 600px;
 }
 
 .form-title {
-    font-size: 42px;
-    font-weight: 600;
-    margin-bottom: 40px;
+  font-size: 42px;
+  font-weight: 600;
+  margin-bottom: 40px;
 }
 
 label {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 input {
-    padding: 10px 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 100%;
+  padding: 10px 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
 /* ********************************************************************* 
 ARTISTS
 ********************************************************************* */
 .artist-list-container {
-    max-width: 800px;
-    margin: 20px auto;
+  max-width: 800px;
+  margin: 20px auto;
 }
 
 .artist-list-heading {
-    font-size: 36px;
-    font-weight: 400;
-    margin: 20px 0;
+  font-size: 36px;
+  font-weight: 400;
+  margin: 20px 0;
 }
 
 .artist-card {
-    padding: 50px 0;
+  padding: 50px 0;
 }
 
 .artist-card__img {
-    width: 200px;
-    height: 200px;
+  width: 200px;
+  height: 200px;
 }
 
 .artist-card__content {
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 20px;
-    padding: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 20px;
+  padding: 20px;
 }
 
 .artist-name {
-    font-size: 60px;
+  font-size: 60px;
 }
 
 .artist-biography {
-    line-height: 2;
-    width: 70%;
-    margin: 0 auto;
+  line-height: 2;
+  width: 70%;
+  margin: 0 auto;
 }
 
 .artist-biography p {
-    margin: 15px 0;
-    font-size: 18px;
+  margin: 15px 0;
+  font-size: 18px;
 }
-
 
 .artist-detail-container,
 .album-detail-container {
-    width: 80%;
-    margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .artist__header-img {
-    margin: 30px 0;
-    max-width: 100%;
+  margin: 30px 0;
+  max-width: 100%;
 }
 
 .artist-followers-count {
-    color: var(--color-red)
+  color: var(--color-red);
 }
 
-details summary{
-    transition: all 0.2s ease;
+details summary {
+  transition: all 0.2s ease;
 }
 
 details summary:hover {
-    cursor: pointer;
-    color: var(--color-red)
+  cursor: pointer;
+  color: var(--color-red);
 }
 /* ********************************************************************* 
 ALBUMS
 ********************************************************************* */
 .album-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    margin: 40px auto;
-    gap: 40px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 40px auto;
+  gap: 40px;
 }
 
 .album-card__title {
-    font-size: 22px;
-    color: var(--color-dark-blue);
-    font-weight: 800;
+  font-size: 22px;
+  color: var(--color-dark-blue);
+  font-weight: 800;
 }
 
 .album-card__artist {
-    font-size: 16px;
-    font-weight: 300;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .album-card > img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .album-detail-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-
 .album-name {
-    font-size: 30px;
-    margin-bottom: 10px;
+  font-size: 30px;
+  margin-bottom: 10px;
 }
 
 .album-artist-name {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .album-detail-img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .album-tracks {
-    padding: 0 40px;
+  padding: 0 40px;
 }
 
 .track-link {
-    margin-bottom: 15px;
-    font-size: 20px;
-    transition: all 0.2s ease;
+  margin-bottom: 15px;
+  font-size: 20px;
+  transition: all 0.2s ease;
 }
 
 .track-link:hover {
-    color: var(--color-spotify-green)
+  color: var(--color-spotify-green);
 }
 
 /* ********************************************************************* 
 MEDIA QUERIES
 ********************************************************************* */
 @media (max-width: 1190px) {
-    .title-1 {
-        letter-spacing: 2px;
-    }
-    .nav-main {
-        gap: 20px;
-    }
+  .title-1 {
+    letter-spacing: 2px;
+  }
+  .nav-main {
+    gap: 20px;
+  }
 }
 
 @media (max-width: 1080px) {
-    .container {
-        padding: 30px;
-    }
-    .title-1 {
-        font-size: 42px;
-    }
-    .nav-link {
-        font-size: 16px;
-    }
-    .artist-detail-container,
-    .album-detail-container {
-        width: 90%;
-    }   
+  .container {
+    padding: 30px;
+  }
+  .title-1 {
+    font-size: 42px;
+  }
+  .nav-link {
+    font-size: 16px;
+  }
+  .artist-detail-container,
+  .album-detail-container {
+    width: 90%;
+  }
 }
 
 @media (max-width: 860px) {
-    header {
-        flex-direction: column;
-        align-items: center;
-    }
-    .logo {
-        align-items: center;
-        margin-bottom: 20px;
-    }
-    .navigation {
-        align-items: center;
-    }
-    .title-greeting {
-        text-align: center;
-    }
-    .title-2 {
-        font-size: 22px;
-    }
-    .artist-biography {
-        width: 100%;
-    }
-    .hero {
-        grid-template-columns: 1fr;
-        padding: 25px;
-    }
-    .hero__img {
-        display: none;
-    }
-    .hero__heading {
-        font-size: 28px;
-    }
-    .hero__subheading {
-        display: none;
-    }
-
-
-
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+  .logo {
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  .navigation {
+    align-items: center;
+  }
+  .title-greeting {
+    text-align: center;
+  }
+  .title-2 {
+    font-size: 22px;
+  }
+  .artist-biography {
+    width: 100%;
+  }
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 25px;
+  }
+  .hero__img {
+    display: none;
+  }
+  .hero__heading {
+    font-size: 28px;
+  }
+  .hero__subheading {
+    display: none;
+  }
 }
 
 @media (max-width: 700px) {
-    .search-bar {
-        margin: 15px 0;
-        width: 380px;
-        font-size: 16px;
-    }
-    .nav-main {
-        flex-direction: column;
-        align-items: center;
-        order: 0;
-        margin: 25px 0;
-    }
-    .nav-social {
-        order: 1;
-        margin-bottom: 0;
-    }
-
+  .search-bar {
+    margin: 15px 0;
+    width: 380px;
+    font-size: 16px;
+  }
+  .nav-main {
+    flex-direction: column;
+    align-items: center;
+    order: 0;
+    margin: 25px 0;
+  }
+  .nav-social {
+    order: 1;
+    margin-bottom: 0;
+  }
 }
