--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,6 +10,11 @@
 
 <div class="flex navigation">
     <div class="nav-social flex">
+        <a href="https://jontoye.gatsbyjs.io/" target="_blank"><img
+            class="icon"
+            src="{% static 'images/icon-web.png' %}"
+            alt="www logo"
+        /></a>
         <a href="https://github.com/jontoye" target="_blank"><img
             class="icon"
             src="{% static 'images/icon-github.png' %}"
@@ -33,7 +38,7 @@
         >
         {% if user.is_authenticated %}
         <a href="{% url 'view_collection' %}" class="nav-link">My Collection</a>
-        <a href="" class="nav-link">My Profile</a>
+        {% comment %} <a href="" class="nav-link">My Profile</a> {% endcomment %}
         {% else %}
         <a href="{% url 'signup' %}" class="nav-link">Signup</a>
         <a href="{% url 'login' %}" class="nav-link">Login</a>
